--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -2,7 +2,7 @@
 \label{sec:spec-sign-assert}
 
 
-In programming we distinguish between \emph{impementation} and
+In programming we distinguish between \emph{implementation} and
 \emph{specification} of a structure. In OCaml these two notions are
 expressed with modules and module types, respectively.\footnote{In
   object-oriented languages implementations and specifications are
@@ -82,7 +82,7 @@ specifications (module types with assertions), such as the above
 module type~$\mathtt{Ab}$ with assertions
 \ref{enum:t-per}--~\ref{enum:ab-group-axiom-4}. The output is written
 in the language of specifications summarized in
-Figure~\ref{fig:input}.
+Figure~\ref{fig:output}.
 
 \begin{figure}
   \[
@@ -154,7 +154,7 @@ Figure~\ref{fig:input}.
     | & \oapp{\omt}{\om} & \mbox{Specification application}
   \end{array}
   \]
-  \label{fig:input}
+  \label{fig:output}
   \caption{The syntax of specifications (Simplified)}
 \end{figure}
 
