--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -26,6 +26,7 @@
 \newcommand{\cfst}[1]{\mathtt{fst}\;#1}
 \newcommand{\csnd}[1]{\mathtt{snd}\;#1}
 \newcommand{\cmod}{\mathbin{\mathtt{mod}}}
+\newcommand{\poly}[1]{\text{\texttt{\char39}}#1}
 
 % Realizaiblity
 \newcommand{\per}{\approx}
