--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -315,3 +315,11 @@ KEY="Peyton Jones"}
     editor = "Wolfgang Bibel and Peter H. Schmidt",
     year = 1998
 }
+
+@Book{barwise75:_admis_sets_struc,
+  author =	 {J. Barwise},
+  title = 	 {Admissible Sets and Structures},
+  publisher = 	 {Springer-Verlag},
+  year = 	 1975
+}
+
