--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -1,11 +1,11 @@
 \section{Examples}
 \label{sec:examples}
 
-In this section we look at serveral examples which demonstrate various
+In this section we look at several examples which demonstrate various
 points of RZ. Unfortunately, serious examples from computable
-mathematics take too much space\footnote{Simply because even to
-  describe real numbers, the most basic structure in analysis, it
-  takes several operations and a dozen axioms or so.} and will have to
+mathematics take too much space\footnote{The most basic structure
+  in analysis (the real numbers) alone 
+  requires several operations and a dozen or more axioms.} and will have to
 be presented separately. The main theme is that constructively
 reasonable axioms yield computationally reasonable operations.
 
@@ -15,7 +15,7 @@ reasonable axioms yield computationally reasonable operations.
 A set $S$ is said to be decidable when, for all $x, y \in S$, $x = y$
 or $\lnot (x = y)$. In classical mathematics all sets are decidable
 because decidability of equality is just an instance of the law of
-exluced middle. However, RZ computes from
+excluded middle. However, RZ computes from
 %
 \sourcefile{decidable1.thy}
 %
