--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -196,8 +196,8 @@
 \newcommand{\oarrow}[2]{#1 \to #2} % arrow
 \newcommand{\ounit}{\mathsf{unit}} % unit type
 \newcommand{\oselect}[2]{#1{.}#2}  % projection from a module
-\newcommand{\osumty}[4]{[`#1\,\mathsf{of}\,#2 \mid \cdots \mid `#3\,\mathsf{of}\,#4]}
-\newcommand{\osumtyx}[4]{[`#1\,\mathsf{of}\,#2 \mid `#3\,\mathsf{of}\,#4]}
+\newcommand{\osumty}[4]{`#1\,\mathsf{of}\,#2 + \cdots + `#3\,\mathsf{of}\,#4}
+\newcommand{\osumtyx}[4]{`#1\,\mathsf{of}\,#2 + `#3\,\mathsf{of}\,#4}
 \newcommand{\ol}{l} % label
 %%%% terms
 \renewcommand{\oe}{e} % expression
